fixes height of small widget maps on mobile

--- a/app/assets/stylesheets/components/shared/c-map-widget.scss
+++ b/app/assets/stylesheets/components/shared/c-map-widget.scss
@@ -1,5 +1,10 @@
 .c-map-widget {
   z-index: 0;
+  height: 245px;
+
+  @media #{$mq-desktop} {
+    height: unset;
+  }
 
   .cluster,
   .dot {
